unpackaged/main/default/objects/xtma_Individual_Email_Result__c/xtma_Individual_Email_Result__c.object-meta.xml
<CustomObject>
    <label>Individual Email Result</label>
    <nameField>
        <label>Email Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Individual Email Results</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>