unpackaged/main/default/objects/xtma_Individual_Email_Result__c/fields/Date_Bounced__c.field-meta.xml
<CustomField>
    <fullName>Date_Bounced__c</fullName>
    <label>Date Bounced</label>
    <type>DateTime</type>
</CustomField>