unpackaged/main/default/objects/xtma_Individual_Email_Result__c/fields/Date_Time_Opened__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_Opened__c</fullName>
    <label>Date Opened</label>
    <type>DateTime</type>
</CustomField>