unpackaged/main/default/objects/xtma_Individual_Email_Result__c/fields/Date_Unsubscribed__c.field-meta.xml
<CustomField>
    <fullName>Date_Unsubscribed__c</fullName>
    <label>Date Unsubscribed</label>
    <type>DateTime</type>
</CustomField>